# pytest-quantum

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  codecov.yml  plan.md  pyproject.toml  release.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  framework_integration.md
.github/workflows/: ci.yml  coverage.yml  publish.yml
.hypothesis/constants/: 050dcc62938a1f34  0881a49eecfc60c5  1c6277adff1ca7af  236fc2acc91562a9  248fb76bd5f60161  2cf6b328f7466723  3579f285a94e4695  36a5aec59fb46e1a  384427d832c79b48  3f6c050a3065fd55  41995e2cd3848de6  43ea8baa98256ff7  54b039683e8b43d2  55c32b9a20b63c51  59c13babd0631937  618ea4325f41c62a  6280e4a2bd095da4  64d6f293b7663b39  66da7b62b9ce1edc  691afc3afe804002  6989b7d8dbf4a428  6b30ada3057ae46b  7556b0b69b272eda  7781e376a954a419  784e1b36ab83bff3  84e8ecd2118c158f  928cfd8de0244a7b  a46d2b088be25f95  a6ff0b856fd7e7a8  a934fc36045636e3  ae9e1722015d1f7b  b29afb286428a0ff  b50255457a402e7c  c4078834eff5470d  d17b7767c828e47c  dc422e6d2637fd4d  dd084b63ab68eb0b  de1255521139b372  e0a39e93d3834c1c  eae3a524816a4f30  (+3 more)
conda-recipe/: meta.yaml
docs/: api.md  assertions.md  changelog.md  concepts.md  conf.py  contributing.md  cookbook.md  fixtures.md  getting-started.md  index.md  requirements.txt  stats.md
docs/tutorials/: 01_vqe_end_to_end.md  02_noise_aware_testing.md  03_real_hardware.md
examples/: conftest.py  test_bell.py  test_noise.py  test_property_based.py
src/pytest_quantum/: __init__.py  _internal.py  config.py  hypothesis_strategies.py  plugin.py  random.py  reporting.py  retry.py
src/pytest_quantum/adapters/: __init__.py  braket.py  cirq.py  cuda_quantum.py  pennylane.py  protocol.py  pytket.py  qibo.py  qiskit.py  qutip.py  registry.py  tequila.py
src/pytest_quantum/assertions/: __init__.py  benchmarking.py  channels.py  compilation.py  cross_platform.py  density.py  distributions.py  entanglement.py  hardware.py  information.py  mitiq_assertions.py  noise_models.py  observables.py  primitives.py  qasm.py  qec.py  quantum_ml.py  resource_estimation.py  snapshot.py  states.py  stim_assertions.py  structure.py  sweeps.py  tomography.py  topology.py  unitary.py
src/pytest_quantum/converters/: __init__.py  to_unitary.py
src/pytest_quantum/fixtures/: __init__.py  benchmarks.py  cirq.py  hardware.py  other.py  qiskit.py
src/pytest_quantum/stats/: __init__.py  shots.py  tests.py
tests/: conftest.py  test_adapters.py  test_assertions_benchmarking.py  test_assertions_channels.py  test_assertions_clifford.py  test_assertions_compilation.py  test_assertions_cross_platform.py  test_assertions_density.py  test_assertions_distributions.py  test_assertions_entanglement.py  test_assertions_hardware.py  test_assertions_information.py  test_assertions_mitiq.py  test_assertions_new_features.py  test_assertions_noise_models.py  test_assertions_observables.py  test_assertions_qasm.py  test_assertions_qec.py  test_assertions_quantum_ml.py  test_assertions_resource_estimation.py  test_assertions_snapshot.py  test_assertions_states.py  test_assertions_structure.py  test_assertions_sweeps.py  test_assertions_tomography.py  test_assertions_topology.py  test_assertions_unitary.py  test_config.py  test_gates_in_basis_set.py  test_hypothesis_strategies.py  test_integration_braket.py  test_integration_cirq.py  test_integration_cirq_shots.py  test_integration_cross_framework.py  test_integration_cuda_quantum.py  test_integration_noise.py  test_integration_pennylane.py  test_integration_primitives.py  test_integration_pytket.py  test_integration_qibo.py  (+12 more)
