[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pytest-quantum"
version = "2.0.0"
description = "A cross-framework pytest plugin for quantum program testing"
readme = "README.md"
license = "MIT"
authors = [{ name = "Tejas", email = "tejasghatule12345@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Testing",
]
keywords = [
    "pytest",
    "quantum",
    "testing",
    "qiskit",
    "cirq",
    "braket",
    "pennylane",
    "graphix",
]
dependencies = [
    "pytest>=8.0",
    "numpy>=2.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
qiskit   = ["qiskit>=1.0", "qiskit-aer>=0.15"]
ibm      = ["qiskit-ibm-runtime>=0.45.1"]
cirq     = ["cirq-core>=1.3"]
braket   = ["amazon-braket-sdk>=1.80", "amazon-braket-default-simulator>=1.23"]
graphix  = ["graphix>=0.3"]
pennylane = ["pennylane>=0.38"]
qcec     = ["mqt.qcec>=2.0"]
pytket   = ["pytket>=1.30"]
stim     = ["stim>=1.13"]
qutip    = ["qutip>=4.7"]
tequila  = ["tequila-basic>=1.9"]
mitiq    = ["mitiq>=0.15"]
cuda_quantum = ["cuda-quantum"]
qibo = ["qibo"]
cvxpy    = ["cvxpy>=1.4"]
all = [
    "pytest-quantum[qiskit]",
    "pytest-quantum[ibm]",
    "pytest-quantum[cirq]",
    "pytest-quantum[braket]",
    "pytest-quantum[graphix]",
    "pytest-quantum[pennylane]",
    "pytest-quantum[qcec]",
    "pytest-quantum[pytket]",
    "pytest-quantum[stim]",
    "pytest-quantum[qutip]",
    "pytest-quantum[mitiq]",
    "pytest-quantum[cvxpy]",
    "pytest-quantum[cuda_quantum]",
    "pytest-quantum[qibo]",
]

[project.urls]
Homepage      = "https://github.com/qbench/pytest-quantum"
Documentation = "https://pytest-quantum.readthedocs.io"
Issues        = "https://github.com/qbench/pytest-quantum/issues"

# pytest auto-discovers the plugin via this entry point on install
[project.entry-points.pytest11]
quantum = "pytest_quantum.plugin"

[dependency-groups]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "myst-parser>=4.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.15",
    "qiskit>=1.0",
    "qiskit-aer>=0.15",
    "cirq-core>=1.3",
    "amazon-braket-sdk>=1.80",
    "amazon-braket-default-simulator>=1.23",
    "graphix>=0.3",
    "pennylane>=0.38",
    "mqt.qcec>=2.0",
    "pytket>=1.30",
    "stim>=1.13",
    "hypothesis>=6.0",
    "filelock>=3.0",  # for pytest-xdist snapshot safety
]

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_quantum"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts   = ["-p", "pytester", "--strict-markers", "-ra"]
testpaths = ["tests"]
# pytest-xdist: session-scoped fixtures are safe (each worker gets its own simulator)
# Snapshot tests require --dist=no or filelock installed for concurrent writes

# ---------------------------------------------------------------------------
# ruff — linter + formatter (replaces black + isort + flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 88
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = [
    "E",   "W",   # pycodestyle
    "F",          # pyflakes
    "UP",         # pyupgrade
    "B",          # bugbear
    "SIM",        # simplify
    "I",          # isort
    "C4",         # comprehensions
    "PT",         # pytest-style
    "RUF",        # ruff-native
    "NPY",        # numpy — catches np.float_, np.bool_, etc.
    "ANN",        # annotation coverage
    "TCH",        # move type-only imports under TYPE_CHECKING
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function-in-default — conflicts with pytest fixtures
    "PT013",  # pytest TYPE_CHECKING imports are intentional (typing only)
    "RUF001", # Greek letters (ρ, σ) are intentional quantum notation
    "RUF002", # Greek letters in docstrings are intentional quantum notation
    "RUF003", # Greek letters in comments are intentional quantum notation
    "ANN401", # Any is required for cross-framework quantum SDK heterogeneous inputs
    "SIM105", # contextlib.suppress is less readable for quantum SDK try/except patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py"                    = ["ANN", "S101", "PT011", "TC002", "RUF059", "TC003", "E402"]
"examples/**/*.py"                 = ["ANN", "S101", "PT011", "TC002", "RUF059", "TC003", "E402"]
"src/pytest_quantum/__init__.py"   = ["F401", "E402"]
"src/pytest_quantum/plugin.py"     = ["ANN201"]  # fixture return types use Any
"src/pytest_quantum/fixtures/*.py" = ["ANN201"]  # fixture return types use Any
"src/pytest_quantum/retry.py"      = ["ANN201"]

[tool.ruff.lint.isort]
known-first-party        = ["pytest_quantum"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style            = "double"
indent-style           = "space"
docstring-code-format  = true

# ---------------------------------------------------------------------------
# mypy — strict
# ---------------------------------------------------------------------------
[tool.mypy]
python_version       = "3.11"
strict               = true
warn_return_any      = true
warn_unused_configs  = true
ignore_missing_imports = true   # optional quantum SDKs may not be installed

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["pytest_quantum"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError", "@overload"]
show_missing  = true
